<resources>
    <string name="app_name">Semaphore</string>

    <!--LOGIN-->
    <string name="login_app_name">Semaphore</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_button_logging_in">Logging In&#8230;</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_register">Sign up for an account</string>
    <string name="login_about">About</string>

    <string name="login_error_email">Please enter your email</string>
    <string name="login_error_password">Please enter your password</string>

    <!--MAIN-->
    <string name="main_current_heading">Currently in your mailbox</string>
    <string name="main_empty_mailbox">You have no items in your mailbox</string>
    <string name="main_categorising_mailbox">Categorising items in mailbox</string>
    <string name="main_no_history">You haven’t received mail\nin this mailbox yet.</string>

    <string name="main_date_heading">MMM dd</string>
    <plurals name="main_letters">
        <item quantity="one">%d letter</item>
        <item quantity="other">%d letters</item>
    </plurals>
    <plurals name="main_magazines">
        <item quantity="one">%d magazine</item>
        <item quantity="other">%d magazines</item>
    </plurals>
    <plurals name="main_newspapers">
        <item quantity="one">%d newspaper</item>
        <item quantity="other">%d newspapers</item>
    </plurals>
    <plurals name="main_parcels">
        <item quantity="one">%d parcel</item>
        <item quantity="other">%d parcels</item>
    </plurals>
    <plurals name="main_items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <string name="cd_history_expand_icon">See details</string>
    <string name="cd_history_collapse_icon">Hide details</string>

    <!--REGISTRATION-->
    <string name="registration_first_name">First Name</string>
    <string name="registration_last_name">Last Name</string>
    <string name="registration_email">Email</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm Password</string>
    <string name="registration_button">Sign Up</string>

    <string name="registration_error_first_name">Please enter your first name.</string>
    <string name="registration_error_last_name">Please enter your last name.</string>
    <string name="registration_error_email">Please enter your email.</string>
    <string name="registration_error_password">Please enter a password.</string>
    <string name="registration_error_confirm_password">Please type your password a second time.</string>
    <string name="registration_error_password_match">Passwords do not match.</string>

    <!--ADD MAILBOX-->
    <string name="mailbox_name">Nickname</string>
    <string name="mailbox_serial">Serial</string>
    <string name="mailbox_button">Add Mailbox</string>

    <string name="mailbox_error_name">Please enter a name.</string>
    <string name="mailbox_error_serial">Please enter the mailbox serial.</string>

    <!--MENU-->
    <string name="menu_add_mailbox">Add a Mailbox</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign Out</string>

    <!--TITLES-->
    <string name="title_login">@string/app_name</string>
    <string name="title_registration">Sign Up</string>
    <string name="title_main">@string/app_name</string>
    <string name="title_mailbox">Add a Mailbox</string>

    <!--NOTIFICATIONS-->
    <string name="notification_mail_title">Mail received</string>
    <string name="notification_mail_received_categorising">You have new items in %1$s</string>
    <plurals name="notification_mail_received_categorised">
        <item quantity="one">You have %1$d new item in %2$s</item>
        <item quantity="other">You have %1$d new items in %2$s</item>
    </plurals>
    <string name="notification_mail_received_group">You have new items in multiple mailboxes</string>
    <string name="notification_view_mailbox">Go to mailbox</string>

</resources>
