<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <EditText
            android:id="@+id/registration_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/registration_first_name"
            android:inputType="textPersonName"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/registration_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/registration_last_name"
            android:inputType="textPersonName"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/registration_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/registration_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:hint="@string/registration_password"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/registration_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:inputType="textPassword"
            android:hint="@string/registration_confirm_password"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/button_blue"
            android:text="@string/registration_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    </LinearLayout>

</ScrollView>