<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <EditText
        android:id="@+id/mailbox_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/mailbox_name"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/mailbox_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:hint="@string/mailbox_serial"
        android:textSize="16sp"
        android:enabled="false"
        />

    <Button
        android:id="@+id/mailbox_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/button_blue"
        android:text="@string/mailbox_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

</LinearLayout>