<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPrimary"
    tools:ignore="Overdraw"
    >

    <LinearLayout
        android:id="@+id/login_logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="128dp"
        android:layout_marginLeft="@dimen/login_side_margin"
        android:layout_marginStart="@dimen/login_side_margin"
        android:layout_marginRight="@dimen/login_side_margin"
        android:layout_marginEnd="@dimen/login_side_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:translationY="124dp"
        tools:translationY="0dp"
        >

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/login_logo"
            android:layout_width="@dimen/logo_image_size"
            android:layout_height="@dimen/logo_image_size"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_animated_logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_app_name"
            android:textSize="@dimen/logo_font_size"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:contentDescription="@string/login_app_name"
            />

    </LinearLayout>

    <View
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_gravity="bottom"
        android:translationY="256dp"
        android:background="@color/white"
        tools:translationY="0dp"
        />

    <LinearLayout
        android:id="@+id/login_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_side_margin"
        android:layout_marginStart="@dimen/login_side_margin"
        android:layout_marginRight="@dimen/login_side_margin"
        android:layout_marginEnd="@dimen/login_side_margin"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal|bottom"
        android:translationY="256dp"
        android:orientation="vertical"
        tools:translationY="0dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:background="@drawable/rounded_white_blue"
            >

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:textSize="12sp"
                android:enabled="false"
                android:background="@color/transparent"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blueDark"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:enabled="false"
                android:background="@color/transparent"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_forgot_password"
            android:textColor="@color/textLink"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:padding="8dp"
            android:background="@drawable/button_blue"
            android:text="@string/login_button"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_register"
            android:textColor="@color/textLink"
            />

    </LinearLayout>

</FrameLayout>