<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_main"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_current_heading"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/main_letters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="1 letter"
        />

    <TextView
        android:id="@+id/main_magazines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_magazine"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:visibility="gone"
        tools:visibility="visible"
        tools:text="1 magazine"
        />

    <TextView
        android:id="@+id/main_newspapers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:drawableLeft="@drawable/ic_newspaper"
        tools:visibility="visible"
        tools:text="1 newspaper"
        />

    <TextView
        android:id="@+id/main_parcels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:drawableLeft="@drawable/ic_parcel"
        tools:visibility="visible"
        tools:text="1 parcel"
        />

    <TextView
        android:id="@+id/main_empty_mailbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/main_empty_mailbox"
        android:textSize="16sp"
        android:textColor="@color/slate"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <LinearLayout
        android:id="@+id/main_categorising_mailbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/main_categorising_mailbox"
            android:textSize="16sp"
            />

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="24dp"
            />

    </LinearLayout>

</merge>